--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,31 @@
-* {
-  padding: 0;
-  margin: 0;
-}
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
 }
 canvas {
-  margin: 0 auto;
   background-color: black;
-  border: 2px solid white;
+  margin-bottom: 16px;
+}
+
+div {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  padding: 5px 10px;
+  border-radius: 10px;
+  border: 3px solid gray;
+  font-size: 20px;
+  color: gray;
+  outline: none;
+}
+
+button:hover {
+  cursor: pointer;
+  border: 3px solid black;
+  color: black;
 }
