--- a/src/Memory.css
+++ b/src/Memory.css
@@ -1,4 +1,4 @@
-.differences {
+.memory {
   width: 100vw;
   min-height: 100vh;
   display: flex;
@@ -22,6 +22,25 @@ button:hover {
   cursor: pointer;
 }
 
+.level {
+  width: 100%;
+  margin: 0 2rem 2rem 2rem;
+}
+
+.level:last-child,
+.level:first-child {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.levels {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 4rem);
+  max-width: 1040px;
+}
+
 .scene {
   width: 50vw;
   min-width: 300px;
@@ -29,11 +48,10 @@ button:hover {
   perspective: 1000px;
 }
 
-.card {
+.card-eq {
   width: 100%;
   height: 100%;
   transition: transform 0.2s linear;
-  transform-style: preserve-3d;
   position: relative;
   display: flex;
   justify-content: center;
@@ -43,12 +61,11 @@ button:hover {
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
 }
 
-.flip-card {
+.flip-card-eq {
   width: 100%;
   height: 100%;
   transform: rotateY(180deg);
   transition: transform 0.2s linear;
-  transform-style: preserve-3d;
   position: relative;
   display: flex;
   justify-content: center;
@@ -58,14 +75,14 @@ button:hover {
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
 }
 
-.flip-card-inner {
-  font-size: 6rem;
+.flip-card-inner-eq {
+  font-size: 3rem;
   color: #2f2f2f;
   transform: rotateY(180deg);
 }
 
-.card-inner {
-  font-size: 6rem;
+.card-inner-eq {
+  font-size: 3rem;
   color: #2f2f2f;
 }
 
@@ -79,16 +96,22 @@ button:hover {
   padding: 2rem;
 }
 
-input {
-  width: 6rem;
-  outline: none;
-  font-size: 6rem;
+.input-group input {
+  width: 3.5rem;
+  font-size: 2.5rem;
   padding: 0.5rem;
   color: #2f2f2f;
   text-align: center;
   border: 2px solid #2f2f2f;
   border-radius: 20px;
   margin: 0 1rem;
+  outline: none;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .instructions {
@@ -108,7 +131,7 @@ input {
   box-shadow: 1px 1px 15px rgba(210, 248, 152, 0.5);
 }
 
-.good-luck-diff {
+.good-luck-mem {
   font-size: 1.5rem;
   font-weight: bold;
 }
