--- a/src/Collision.css
+++ b/src/Collision.css
@@ -1,8 +1,10 @@
 .app {
+  width: 100vw;
+  min-height: 100vh;
+  max-width: 1040px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
   margin: 0 auto;
 }
