--- a/src/Differences.css
+++ b/src/Differences.css
@@ -1,6 +1,7 @@
 .differences {
   width: 100vw;
   min-height: 100vh;
+  max-width: 1040px;
   display: flex;
   flex-direction: column;
   justify-content: center;
