--- a/src/Home.css
+++ b/src/Home.css
@@ -1,22 +1,14 @@
-canvas {
-  background-color: #000000;
-  margin-bottom: 16px;
-}
-
-.canvas-wrapper {
+.home {
+  width: 100vw;
+  min-height: 100vh;
+  max-width: 1040px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
 }
 
-.toggle {
-  display: none;
-}
-
-.start {
+.intro {
   width: calc(100% - 4rem);
   max-width: 1040px;
   display: flex;
@@ -33,22 +25,36 @@ canvas {
   box-shadow: 1px 1px 15px rgba(210, 248, 152, 0.5);
 }
 
-button {
+.preview {
+  width: calc((100% - 6rem) / 2);
+  height: 200px;
   padding: 1rem 2rem;
+  margin: 0 1rem 2rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   border: none;
   border-radius: 30px;
   outline: none;
   background-color: #2f2f2f;
+  transition: 0.2s ease-in-out;
   color: #d2f898;
-  font-size: 2rem;
+  font-size: 1.2rem;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+  text-decoration: none;
 }
 
-button:hover {
+.preview:hover {
   cursor: pointer;
+  background-color: #444444;
 }
 
-.good-luck {
-  font-size: 1.5rem;
-  font-weight: bold;
+.games {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1040px;
 }
