--- a/src/Math.css
+++ b/src/Math.css
@@ -3,8 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-top: 16px;
-  font-size: 30px;
+  margin-top: 1rem;
   color: #2f2f2f;
 }
 
@@ -18,7 +17,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 16px 32px;
+  margin: 1rem 2rem;
 }
 
 .answers {
@@ -29,11 +28,11 @@
 
 .choice {
   display: flex;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 
 .arrow {
-  padding-left: 8px;
+  padding-left: 0.5rem;
 }
 
 .left {
@@ -49,5 +48,43 @@
 }
 
 .score {
-  font-size: 16px;
+  font-size: 1.5rem;
+}
+
+.scene-math {
+  width: 800px;
+  height: auto;
+  perspective: 1000px;
+}
+
+.card-math {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.2s linear;
+  position: relative;
+  background-color: #fcfcfc;
+  border-radius: 30px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+}
+
+.flip-card-math {
+  width: 100%;
+  height: 100%;
+  transform: rotateY(180deg);
+  transition: transform 0.2s linear;
+  position: relative;
+  background-color: #fcfcfc;
+  border-radius: 30px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+}
+
+.flip-card-inner-math {
+  font-size: 2rem;
+  color: #2f2f2f;
+  transform: rotateY(180deg);
+}
+
+.card-inner-math {
+  font-size: 2rem;
+  color: #2f2f2f;
 }
